[ISSUE-797] add g1 in jvm gc default parameters