@@ -3,7 +3,7 @@
  *
  * Copyright (C) 2017-2018 THL A29 Limited, a Tencent company. All rights reserved.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in 
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in
  * compliance with the License. You may obtain a copy of the License at
  *
  * https://opensource.org/licenses/Apache-2.0
@@ -20,6 +20,10 @@ package com.tencent.angel.master.yarn.util;
 
 import com.tencent.angel.conf.AngelConf;
 import com.tencent.angel.ps.PSAttemptId;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Vector;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
@@ -32,15 +36,11 @@ import org.apache.hadoop.yarn.api.records.ApplicationId;
 import org.apache.hadoop.yarn.conf.YarnConfiguration;
 import org.apache.hadoop.yarn.util.Apps;
 
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Vector;
-
 /**
  * Ps JVM command utils
  */
 public class ParameterServerJVM {
+
   private static final Log LOG = LogFactory.getLog(ParameterServerJVM.class);
 
   private static String getTaskLogFile(LogName filter) {
@@ -60,7 +60,7 @@ public class ParameterServerJVM {
    * Set environment variables of ps attempt process
    *
    * @param environment environment variables of ps attempt process
-   * @param conf        application configuration
+   * @param conf application configuration
    */
   public static void setVMEnv(Map<String, String> environment, Configuration conf) {
     // Add the env variables passed by the user
@@ -94,15 +94,9 @@ public class ParameterServerJVM {
   }
 
   private static String getChildJavaOpts(Configuration jobConf, ApplicationId appid,
-    PSAttemptId psAttemptId) {
-    String userOpts;
+      PSAttemptId psAttemptId) {
+    String userOpts = null;
     userOpts = jobConf.get(AngelConf.ANGEL_PS_JAVA_OPTS);
-
-    // Old parameter name
-    if(userOpts == null) {
-      userOpts = jobConf.get("angel.ps.child.opts");
-    }
-
     if (userOpts == null) {
       userOpts = generateDefaultJVMParameters(jobConf, appid, psAttemptId);
     }
@@ -111,40 +105,28 @@ public class ParameterServerJVM {
   }
 
   private static String generateDefaultJVMParameters(Configuration conf, ApplicationId appid,
-    PSAttemptId psAttemptId) {
+      PSAttemptId psAttemptId) {
     int psMemSizeInMB =
-      conf.getInt(AngelConf.ANGEL_PS_MEMORY_GB, AngelConf.DEFAULT_ANGEL_PS_MEMORY_GB) * 1024;
+        conf.getInt(AngelConf.ANGEL_PS_MEMORY_GB, AngelConf.DEFAULT_ANGEL_PS_MEMORY_GB) * 1024;
 
     if (psMemSizeInMB < 2048) {
       psMemSizeInMB = 2048;
     }
 
+    // General params
     boolean isUseDirect = conf
-      .getBoolean(AngelConf.ANGEL_NETTY_MATRIXTRANSFER_SERVER_USEDIRECTBUFFER,
-        AngelConf.DEFAULT_ANGEL_NETTY_MATRIXTRANSFER_SERVER_USEDIRECTBUFFER);
+        .getBoolean(AngelConf.ANGEL_NETTY_MATRIXTRANSFER_SERVER_USEDIRECTBUFFER,
+            AngelConf.DEFAULT_ANGEL_NETTY_MATRIXTRANSFER_SERVER_USEDIRECTBUFFER);
 
     float directFatorUseDirectBuff = conf
-      .getFloat(AngelConf.ANGEL_PS_JVM_DIRECT_FACTOR_USE_DIRECT_BUFF,
-        AngelConf.DEFAULT_ANGEL_PS_JVM_DIRECT_FACTOR_USE_DIRECT_BUFF);
+        .getFloat(AngelConf.ANGEL_PS_JVM_DIRECT_FACTOR_USE_DIRECT_BUFF,
+            AngelConf.DEFAULT_ANGEL_PS_JVM_DIRECT_FACTOR_USE_DIRECT_BUFF);
 
     float directFatorUseHeapBuff = conf.getFloat(AngelConf.ANGEL_PS_JVM_DIRECT_FACTOR_USE_HEAP_BUFF,
-      AngelConf.DEFAULT_ANGEL_PS_JVM_DIRECT_FACTOR_USE_HEAP_BUFF);
+        AngelConf.DEFAULT_ANGEL_PS_JVM_DIRECT_FACTOR_USE_HEAP_BUFF);
 
     float youngFator = conf
-      .getFloat(AngelConf.ANGEL_PS_JVM_YOUNG_FACTOR, AngelConf.DEFAULT_ANGEL_PS_JVM_YOUNG_FACTOR);
-
-    // Parallel GC parameters
-    boolean isUseParallel = conf.getBoolean(AngelConf.ANGEL_PS_JVM_USE_PARALLEL_GC,
-        AngelConf.DEFAULT_ANGEL_PS_JVM_USE_PARALLEL_GC);
-
-    int parallelGCThread = conf.getInt(AngelConf.ANGEL_PS_JVM_PARALLEL_GC_THREADS,
-        AngelConf.DEFAULT_ANGEL_PS_JVM_PARALLEL_GC_THREADS);
-
-    int parallelGCMaxPauseMillis = conf.getInt(AngelConf.ANGEL_PS_JVM_PARALLEL_GC_MAX_PAUSE_TIME_MS,
-        AngelConf.DEFAULT_ANGEL_PS_JVM_PARALLEL_GC_MAX_PAUSE_TIME_MS);
-
-    boolean useAdaptiveSize = conf.getBoolean(AngelConf.ANGEL_PS_JVM_PARALLEL_GC_USE_ADAPTIVE_SIZE,
-        AngelConf.DEFAULT_ANGEL_PS_JVM_PARALLEL_GC_USE_ADAPTIVE_SIZE);
+        .getFloat(AngelConf.ANGEL_PS_JVM_YOUNG_FACTOR, AngelConf.DEFAULT_ANGEL_PS_JVM_YOUNG_FACTOR);
 
     // G1 params
     boolean useG1 = conf
@@ -179,6 +161,7 @@ public class ParameterServerJVM {
     int mixGcTargetCount = conf.getInt(AngelConf.ANGEL_PS_JVM_G1_MIXGC_TARGET_COUNT,
         AngelConf.DEFAULT_ANGEL_PS_JVM_G1_MIXGC_TARGET_COUNT);
 
+
     int useMax = psMemSizeInMB - 512;
     int directRegionSize = 0;
     if (isUseDirect) {
@@ -192,33 +175,7 @@ public class ParameterServerJVM {
     int survivorRatio = 4;
 
     String ret;
-
-    if(isUseParallel) {
-      // Parallel Scavenge + Parallel Old
-      StringBuilder sb = new StringBuilder();
-      sb.append(" -Xmx").append(heapMax).append("M");
-      if(useAdaptiveSize) {
-        sb.append(" -XX:+UseAdaptiveSizePolicy");
-        sb.append(" -XX:MaxGCPauseMillis=").append(parallelGCMaxPauseMillis);
-      } else {
-        sb.append(" -Xms").append(heapMax).append("M");
-        sb.append(" -XX:-UseAdaptiveSizePolicy");
-        sb.append(" -Xmn").append(youngRegionSize).append("M");
-        sb.append(" -XX:SurvivorRatio=").append(survivorRatio);
-      }
-
-      ret = sb.append(" -XX:MaxDirectMemorySize=").append(directRegionSize).append("M")
-          .append(" -XX:PermSize=100M -XX:MaxPermSize=200M")
-          .append(" -XX:+AggressiveOpts")
-          .append(" -XX:+UseLargePages")
-          .append(" -XX:+UseParallelOldGC")
-          .append(" -XX:ParallelGCThreads=").append(parallelGCThread)
-          .append(" -verbose:gc")
-          .append(" -XX:+PrintGCDateStamps")
-          .append(" -XX:+PrintGCDetails")
-          .append(" -Xloggc:<LOG_DIR>/gc.log").toString();
-    } else if(useG1) {
-      // G1
+    if (useG1) {
       ret = new StringBuilder().append(" -Xmx").append(heapMax).append("M")
           .append(" -XX:MaxDirectMemorySize=")
           .append(directRegionSize).append("M")
@@ -227,8 +184,8 @@ public class ParameterServerJVM {
           .append(" -XX:+UseG1GC")
           .append(" -XX:+UnlockExperimentalVMOptions")
           .append(" -XX:MaxGCPauseMillis=").append(maxPauseTimeTs)
-          //.append(" -XX:G1NewSizePercent=").append(minNewRatio)
-          //.append(" -XX:G1MaxNewSizePercent=").append(maxNewRatio)
+          .append(" -XX:G1NewSizePercent=").append(minNewRatio)
+          .append(" -XX:G1MaxNewSizePercent=").append(maxNewRatio)
           .append(" -XX:G1HeapRegionSize=").append(regionSizeMB).append("m")
           .append(" -XX:InitiatingHeapOccupancyPercent=").append(ihop)
           .append(" -XX:G1MixedGCLiveThresholdPercent=").append(mixGcLiveThreshold)
@@ -240,7 +197,6 @@ public class ParameterServerJVM {
           .append(" -XX:+PrintGCDateStamps").append(" -XX:+PrintGCDetails")
           .append(" -Xloggc:<LOG_DIR>/gc.log").toString();
     } else {
-      // CMS
       ret = new StringBuilder().append(" -Xmx").append(heapMax).append("M").append(" -Xmn")
           .append(youngRegionSize).append("M").append(" -XX:MaxDirectMemorySize=")
           .append(directRegionSize).append("M").append(" -XX:SurvivorRatio=").append(survivorRatio)
@@ -253,7 +209,6 @@ public class ParameterServerJVM {
           .append(" -Xloggc:<LOG_DIR>/gc.log").toString();
     }
 
-    LOG.info("PS GC parameters: " + ret);
     return ret;
   }
 
@@ -265,13 +220,13 @@ public class ParameterServerJVM {
   /**
    * Generate ps attempt jvm command
    *
-   * @param conf        application configuration
-   * @param appid       application id
+   * @param conf application configuration
+   * @param appid application id
    * @param psAttemptId ps attempt id
    * @return ps attempt jvm command
    */
   public static List<String> getVMCommand(Configuration conf, ApplicationId appid,
-    PSAttemptId psAttemptId) {
+      PSAttemptId psAttemptId) {
 
     Vector<String> vargs = new Vector<String>(8);
     vargs.add(Environment.JAVA_HOME.$() + "/bin/java");
